--- a/class-work.html
+++ b/class-work.html
@@ -7,19 +7,20 @@
             <title>class work</title>
 </head>
 <body>
-     <h1>my name is Adebisi Wasiu, i'm a computer science student at kwara state polytechnic</h1>
+     <h1>My Name is Adebisi Wasiu, i'm a Computer Science student at Kwara State Polytechnic</h1>
      <h3>i'm here to tell you about a cat</h3>
      
-     <p>the name of the cat is Terry he his 3yrs old, he love drinking milk and eating meat and fish, the best thing he love doing is to sleep til kindom come</p>
+     <p>The Name of the Cat is Terry he his 3yrs old, He love Drinking milk and eating meat and fish, The best thing he love doing is to sleep til Kindom come</p>
            
-     <h2>the list of what he love</h2>
+     <h2>The list of what He love</h2>
 
      <ul>
-            <li>milk</li>
-            <li>fish</li>
-            <li>sleeping</li>
-            <li>going out at night</li>
+            <li>Milk</li>
+            <li>Fish</li>
+            <li>Sleeping</li>
+            <li>Going out at night</li>
     </ul>
-            <p>that all about my cat</p>
+            <p>That all about My Cat</p>
+            <img src="cat.jpg" alt="mycat pic">
 </body>
 </html>
